--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/House.loader.js";
       var config = {
-        dataUrl: buildUrl + "/House.data.gz",
-        frameworkUrl: buildUrl + "/House.framework.js.gz",
-        codeUrl: buildUrl + "/House.wasm.gz",
+        dataUrl: buildUrl + "/House.data",
+        frameworkUrl: buildUrl + "/House.framework.js",
+        codeUrl: buildUrl + "/House.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "Sid",
         productName: "House Planning",
