Adding on screen control

--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/House Web.loader.js";
+      var loaderUrl = buildUrl + "/housesimulate.loader.js";
       var config = {
-        dataUrl: buildUrl + "/House Web.data",
-        frameworkUrl: buildUrl + "/House Web.framework.js",
-        codeUrl: buildUrl + "/House Web.wasm",
+        dataUrl: buildUrl + "/housesimulate.data",
+        frameworkUrl: buildUrl + "/housesimulate.framework.js",
+        codeUrl: buildUrl + "/housesimulate.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "Sid",
         productName: "House Planning",
