Fix HTML issues

--- a/Desktop/index.html
+++ b/Desktop/index.html
@@ -63,8 +63,8 @@
         frameworkUrl: buildUrl + "/Desktop.framework.js",
         codeUrl: buildUrl + "/Desktop.wasm",
         streamingAssetsUrl: "StreamingAssets",
-        companyName: "DefaultCompany",
-        productName: "My project",
+        companyName: "Sid",
+        productName: "House Planning",
         productVersion: "0.1",
         showBanner: unityShowBanner,
       };
