--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
 	<body>
 		<font size=+5>
 			<br><br>
-			<p align=center><a href="https://sidwangnext.github.io/housesimulate/Desktop/index.html">PC/Mac</p>
+			<p align=center><a href="./Desktop/index.html">PC/Mac</p>
 			<br>
-			<p align=center><a href="https://sidwangnext.github.io/housesimulate/Mobile/index.html">iPhone/Android<br>
-			<br>
+			<p align=center><a href="./Mobile/index.html">iPhone/Android</p>
+			<br><br>
 		</font>
-		
+
 	</body>
 </html>
